<resources>
    <string name="app_name">dianping</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新 …</string>
    <string name="pull_to_refresh_refreshing_label">载入中 …</string>
    <string name="pull_to_refresh_release_label">松开可以刷新 …</string>
    <string name="Cancel">取消</string>
    <string name="Ensure">确定</string>
    <string name="action_settings">Settings</string>
    <string name="all_reviews_guest">他在这家店的全部点评</string>
    <string name="all_reviews_owner">我在这家店的全部点评</string>
    <string name="app_des">点评团购-美食</string>
    <string name="app_picker_name">应用</string>
    <string name="back">返回</string>
    <string name="beauty_avg_price">人均 ¥</string>
    <string name="beauty_booking_tip">个名额</string>
    <string name="beauty_color_gray">\#666664</string>
    <string name="beauty_has_extra_cost">是否有额外消费</string>
    <string name="beauty_input_stylist">请输入发型师名字</string>
    <string name="beauty_num_unit">条</string>
    <string name="beauty_price">价格</string>
    <string name="beauty_recommended_stylists">选择发型师</string>
    <string name="beauty_shopcoupon_deadline">有效期：</string>
    <string name="beauty_shopcoupon_dialog_confirm">我知道了</string>
    <string name="beauty_shopcoupon_empty">更多优惠 敬请期待</string>
    <string name="beauty_shopcoupon_getted_before">立即领取</string>
    <string name="beauty_shopcoupon_getted_result">领取成功</string>
    <string name="beauty_shopcoupon_money_type">￥</string>
    <string name="beauty_shopcoupon_rule">使用规则：</string>
    <string name="beauty_shopcoupon_type">劵种类：</string>
    <string name="beauty_sign_rmb">￥</string>
    <string name="beauty_tip_info_all">全部</string>
    <string name="beauty_tip_info_booking">条预订</string>
    <string name="booking_change_points">此次增加的信誉值</string>
    <string name="booking_points">手机号码对应的信誉值</string>
    <string name="booking_rationale_contacts">"您可直接在通讯录中选择用餐人手机号
设置路径：设置->应用->大众点评->权限。"</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">Google 购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="checkin_success">签到成功</string>
    <string name="city_search_hint">城市名、拼音首字母 …</string>
    <string name="confirm">确认</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="connect_customer_service">退款未如期到账？联系客服</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="contribution_down">下拉 显示商户详情</string>
    <string name="contribution_up">上拉 显示用户贡献</string>
    <string name="deallist_search_deal_hint">输入商户名、地点</string>
    <string name="default_error_message">网络连接失败 点击重新加载</string>
    <string name="default_expert_search_hint">搜索服务或行家类型</string>
    <string name="default_search_hint">输入商户名、地点</string>
    <string name="diag_description">页面打不开？请点击“诊断网络”</string>
    <string name="diag_diag">诊断网络</string>
    <string name="diag_failed">无法连接到网络诊断，请稍后再试</string>
    <string name="diag_finish_description">我们已收到您的情况。我们会尽快为您查明问题。</string>
    <string name="diag_finish_title">网络检测完成</string>
    <string name="diag_waiting">正在为您诊断网络</string>
    <string name="empty_citys">No citys found</string>
    <string name="err_beauty_stylist_existed">此发型师已存在</string>
    <string name="err_null_input">输入不能为空</string>
    <string name="err_null_shopid">无法获得商户ID</string>
    <string name="etc_like_users">等%1$d人</string>
    <string name="everyday_recommend">每日推荐</string>
    <string name="fail_not_pay">如果您还未进行付款，您可以</string>
    <string name="fail_yes_pay">如果您已经完成付款，您可以</string>
    <string name="famous_shop">大牌抢购</string>
    <string name="feed_comment_list_collapse">收起</string>
    <string name="feed_comment_list_expand">查看全部%1$d条回复</string>
    <string name="feed_power_hint">打分</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="jobs">我的工作</string>
    <string name="listview_footer_hint_normal">查看更多</string>
    <string name="listview_footer_hint_ready">松开载入更多</string>
    <string name="listview_header_hint_loading">正在加载...</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_ready">松开刷新数据</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="loading">正在加载...</string>
    <string name="local_search_hint">附近5000米以内的商户</string>
    <string name="lottery_successfull">"恭喜您成功参与本次抽奖活动！
您的抽奖号是:%1$s 
您可以在我的订单中查看抽奖结果"</string>
    <string name="mc_be_member">成为会员</string>
    <string name="mc_birthday_text">生日：</string>
    <string name="mc_browser_bill_price">查看价目表</string>
    <string name="mc_browser_shop_info">查看商户信息</string>
    <string name="mc_buy_now">立即抢购</string>
    <string name="mc_cardlist">更多会员卡</string>
    <string name="mc_choice_chain_shop">选择分店</string>
    <string name="mc_feedlist">会员活动</string>
    <string name="mc_free_join">免费添加</string>
    <string name="mc_general_privilege">会员特权</string>
    <string name="mc_hello_world">yy</string>
    <string name="mc_join_card">成为会员</string>
    <string name="mc_mycard">我的会员卡</string>
    <string name="mc_other_shops">其他分店</string>
    <string name="mc_privilege">特权</string>
    <string name="mc_shop_info">商户信息</string>
    <string name="mc_show_general_card_tips">消费前向服务员出示此卡</string>
    <string name="mc_show_vip_card_tips">结账时向服务员出示此卡</string>
    <string name="mc_special_tips">特别提示</string>
    <string name="mc_username_text">姓名：</string>
    <string name="mc_vip_privilege">高级会员特权</string>
    <string name="menu_add_follow">添加关注</string>
    <string name="menu_campaignboard">签到活动</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_logout">退出登录</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_signup">注册</string>
    <string name="menu_view_mode">View mode</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">将二维码放到取景框里，即可自动扫描</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。</string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">Google 购物未安装</string>
    <string name="msg_install_google_shopper">Google 购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="my_cookie">最近浏览</string>
    <string name="my_dianping">我的点评</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_help">帮助</string>
    <string name="my_interest">我的关注</string>
    <string name="my_needreview">待点评</string>
    <string name="my_orders">我的订单</string>
    <string name="my_service_center">联系客服</string>
    <string name="my_tuan">我的团购券</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_wallet_subtitle">积分/抵用券/现金券</string>
    <string name="next">下一步</string>
    <string name="note_button">点击开启</string>
    <string name="note_subtitle">100%中奖这种事我会乱说吗？</string>
    <string name="note_title">恭喜你获赠神秘彩蛋！</string>
    <string name="ok">确定</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">1D工业</string>
    <string name="preferences_decode_1D_product_title">1D产品</string>
    <string name="sd_cart_free">[免费]</string>
    <string name="sd_detail_mealset_copies">份数</string>
    <string name="sd_detail_mealset_detail">套餐详情</string>
    <string name="sd_detail_mealset_dish">菜品</string>
    <string name="sd_empty_cart">暂无菜品</string>
    <string name="sd_empty_cart_guide">快去把你想吃的菜品添加到购物车吧</string>
    <string name="sd_gotomenu">去看菜单</string>
    <string name="sd_one_piece">1份</string>
    <string name="sd_soldout">已售完</string>
    <string name="select_manual_button">手动输入桌号</string>
    <string name="select_manual_tip">若扫描二维码有误，您可手动输入</string>
    <string name="select_scan_tip">"请扫描大众点评二维码,
确认下单桌号"</string>
    <string name="select_user_review">用户点评</string>
</resources>