<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_24" android:textColor="@color/deep_gray" android:gravity="center" android:id="@id/sd_empty_cart_maintext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sd_empty_cart" android:layout_centerVertical="true" />
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/text_gray" android:gravity="center" android:id="@id/sd_empty_cart_subtext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sd_empty_cart_guide" android:layout_below="@id/sd_empty_cart_maintext" />
    <com.dianping.widget.view.NovaButton android:textSize="@dimen/text_size_20" android:id="@id/backlist" android:paddingLeft="62.0dip" android:paddingTop="12.0dip" android:paddingRight="62.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/sd_gotomenu" android:layout_below="@id/sd_empty_cart_subtext" android:layout_centerHorizontal="true" style="@style/NovaWeightButton" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:src="@drawable/sd_shopping_cart_empty" android:layout_above="@id/sd_empty_cart_maintext" android:layout_centerHorizontal="true" />
</RelativeLayout>