<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <WebView android:id="@id/diag_webview" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:id="@id/diag_start_layout" android:background="@color/white" android:paddingTop="10.0dip" android:paddingBottom="15.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_medium_1" android:textColor="@color/text_gray" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/diag_description" />
            <com.dianping.widget.view.NovaButton android:id="@id/diag_start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/diag_diag" style="@style/NovaWeightButton" />
            <TextView android:textSize="@dimen/text_medium" android:textColor="@color/text_color_default" android:id="@id/diag_info" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/diag_success" android:background="@color/white" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/diag_icon" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/common_icon_check" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/text_large" android:textColor="@color/black" android:id="@id/diag_success_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/diag_finish_title" android:layout_toRightOf="@id/diag_icon" />
        <TextView android:textSize="@dimen/text_medium_1" android:textColor="@color/text_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/diag_finish_description" android:layout_toRightOf="@id/diag_icon" android:layout_below="@id/diag_success_title" />
    </RelativeLayout>
</FrameLayout>