<?xml version="1.0" encoding="utf-8"?>
<com.dianping.base.widget.TableView android:id="@id/my_tableview" android:paddingBottom="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" dp:divider_padding="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dp="http://schemas.android.com/apk/res-auto">
    <com.dianping.base.widget.TableHeader android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/white_bg" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="79.0dip">
        <com.dianping.base.widget.UserProfileVerticalItem android:gravity="center" android:id="@id/review" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" dp:itemTitle="@string/my_dianping" dp:itemImage="@drawable/my_dianping_user_icon_normal" dp:itemTag="me.review" />
        <View android:layout_gravity="right" android:background="@color/inner_divider" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <com.dianping.base.widget.UserProfileVerticalItem android:gravity="center" android:id="@id/favour" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" dp:itemTitle="@string/my_favorite" dp:itemImage="@drawable/my_favorite_user_icon_normal" dp:itemTag="me.favour" />
        <View android:layout_gravity="right" android:background="@color/inner_divider" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <com.dianping.base.widget.UserProfileVerticalItem android:gravity="center" android:id="@id/tuan" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" dp:itemTitle="@string/my_tuan" dp:itemImage="@drawable/my_coupon_user_icon_normal" dp:itemTag="me.tuan" />
        <View android:layout_gravity="right" android:background="@color/inner_divider" android:layout_width="1.0px" android:layout_height="fill_parent" />
    </LinearLayout>
    <com.dianping.base.widget.TableView android:id="@id/extra_info_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</com.dianping.base.widget.TableView>