<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dp="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@drawable/background_gray_bottom_line" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.dianping.widget.NetworkImageView android:id="@id/album_photo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="centerCrop" dp:placeholderEmpty="@drawable/placeholder_loading_b" dp:placeholderLoading="@drawable/placeholder_loading_b" dp:placeholderError="@drawable/placeholder_loading_b" />
        <include layout="@layout/selected_detail_buy_layout" />
        <LinearLayout android:orientation="horizontal" android:id="@id/free_rule_promotion" android:background="@drawable/background_light_gray_line" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="7.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_9" android:textColor="@color/light_line_red" android:id="@id/selected_dish_promotion" android:background="@drawable/background_orange_promotion" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/text_size_15" android:id="@id/promotion_content" android:paddingLeft="7.0dip" android:paddingRight="22.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:lineSpacingExtra="8.0dip" />
            <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/light_gray" android:gravity="end|center" android:id="@id/have_bought_count" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        </LinearLayout>
        <RelativeLayout android:id="@id/sd_detail_mealset_detail_title" android:background="@drawable/background_gray_divider_line" android:paddingLeft="15.0dip" android:paddingTop="30.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/deep_gray" android:gravity="center_vertical" android:id="@id/sd_detail_mealset_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sd_detail_mealset_detail" android:layout_alignParentLeft="true" />
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/light_gray" android:gravity="center_vertical" android:id="@id/sd_detail_mealset_validity_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/sd_detail_mealset_desc_view" android:background="@drawable/background_sd_mealset_light_gray_line" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/text_gray" android:id="@id/sd_detail_mealset_desc_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TableLayout android:id="@id/sd_detail_mealset_table" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip">
                <TableRow android:background="@drawable/background_selectdish_detail_mealset_title">
                    <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/light_gray" android:gravity="left" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sd_detail_mealset_dish" android:layout_weight="1.0" />
                    <RelativeLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <ImageView android:id="@id/sd_detail_arrow" android:paddingRight="10.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow" android:layout_alignParentRight="true" />
                        <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/light_gray" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sd_detail_mealset_copies" android:layout_toLeftOf="@id/sd_detail_arrow" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/selected_dish_desc_view" android:background="@drawable/background_light_gray_line" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/deep_gray" android:id="@id/selected_dish_desc" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingExtra="10.0dip" />
            <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/light_gray" android:gravity="end" android:id="@id/foot_notes" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/deep_gray" android:id="@id/selected_dish_review" android:background="@drawable/background_gray_divider_line" android:paddingLeft="15.0dip" android:paddingTop="30.0dip" android:paddingBottom="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_user_review" />
</LinearLayout>